[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Resources/Images/grant.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sounds/Laser_Gun_Shot_4.wav" type="AudioStream" id=3]
[ext_resource path="res://Resources/Sounds/Character_Death_Voice_1.wav" type="AudioStream" id=4]
[ext_resource path="res://Materials/Flash_Mat.tres" type="Material" id=5]
[ext_resource path="res://Prefabs/Sword.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 44.5 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.0
height = 28.0

[sub_resource type="Animation" id=3]
resource_name = "DeathFlash"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/white_progress")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 5 )
position = Vector2( 16.875, -21.375 )
scale = Vector2( -0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -22.25, -17.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 23.125, 35.875 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 20, -44.5 )
shape = SubResource( 2 )

[node name="BulletSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/DeathFlash = SubResource( 3 )

[node name="DebugLine" type="Line2D" parent="."]
width = 1.0
default_color = Color( 1, 0, 0, 1 )

[node name="SwordRot" type="Node2D" parent="."]

[node name="Sword" parent="SwordRot" instance=ExtResource( 6 )]
position = Vector2( 86, -1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
